--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,16 @@ services:
       - "etcd"
       - "minio"
 
+  attu:
+    container_name: milvus-attu
+    image: zilliz/attu:latest
+    environment:
+      MILVUS_URL: standalone:19530
+    ports:
+      - "8083:3000"
+    depends_on:
+      - "standalone"
+
 networks:
   default:
     name: milvus
