--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ llama-index-vector-stores-milvus = "^0.5.0"
 llama-index-embeddings-openai = "^0.3.1"
 llama-index-llms-openai = "^0.3.13"
 llama-index-readers-file = "^0.4.2"
+torch = "^2.6.0"
+transformers = "^4.48.3"
+sentence-transformers = "^3.4.1"
+llama-index-embeddings-huggingface = "^0.5.1"
 
 
 [build-system]
