📝 (COST.md): Simplify cost examples and improve token explanation ⬆️ (pyproject.toml): Add tiktoken dependency for token counting ✨ (starter.py): Implement token counting and cost calculation using tiktoken 💡 (starter.py): Add comments for new token counting and cost calculation logic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ torch = "^2.6.0"
 transformers = "^4.48.3"
 sentence-transformers = "^3.4.1"
 llama-index-embeddings-huggingface = "^0.5.1"
+tiktoken = "^0.9.0"
 
 
 [build-system]
